Render dummy board

--- a/views/play.haml
+++ b/views/play.haml
@@ -1,5 +1,10 @@
 !!! 5
 %html
   %head
+    %link{ :rel => "stylesheet", :href => "/jgo/jgoboard.css", :type => "text/css" }
+    %script{ :type => "text/javascript", :src => "https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js" }
+    %script{ :type => "text/javascript", :src => "/jgo/all-min.js" }
+    %script{ :type => "text/javascript", :src => "/js/play.js" }
     %title weiqi by Eugene Ma
   %body
+    .jgo_board#board
