Hook game engine up to front-end

--- a/views/play.haml
+++ b/views/play.haml
@@ -7,4 +7,4 @@
     %script{ :type => "text/javascript", :src => "/js/play.js" }
     %title weiqi by Eugene Ma
   %body
-    .jgo_board#board
+    .jgo_board#board{ :side => @color }
