--- a/views/play.haml
+++ b/views/play.haml
@@ -5,6 +5,7 @@
     %script{ :type => "text/javascript", :src => "https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js" }
     %script{ :type => "text/javascript", :src => "/jgo/all-min.js" }
     %script{ :type => "text/javascript", :src => "/js/play.js" }
+    %script{ :src => "http://js.pusher.com/1.12/pusher.min.js" }
     %title weiqi by Eugene Ma
   %body
     .jgo_board#board{ :game_id => @g.id, :side => @color }
